--- a/_posts/2015-09-12-about.md
+++ b/_posts/2015-09-12-about.md
@@ -20,8 +20,23 @@ featured: /images/ttak-48.png
 
 இதுதான் என்னைப் பற்றி கூறிக் கொள்ள வேண்டிய வார்த்தைகள்.
 
-சமுதாயத்தில் நல்ல ஆணாக நேர்மையான ஆணாக, இருந்து நீங்கள் ஒரு நாகரிகமற்ற பெண்ணை திருமணம் முடித்தால் 
-எனது வாழ்வுதான் கதி.
+சமுதாயத்தில் நல்ல ஆணாக நேர்மையான ஆணாக, இருந்து நீங்கள் ஒரு நாகரிகமற்ற பெண்ணை திருமணம் முடித்தால் **எனது வாழ்வுதான் கதி.**
 
-எனது வாழ்வின் எனது குடும்பத்தின் பொன்னான நேரங்கள் இழந்தோம். இந்த நாட்டில் உருவாக்கி வைக்கப்பட்டு உள்ள 
-பாலியல் அடிப்படையிலான சட்டங்கள் என்னையும் எனது குடும்பத்தையும் எப்படி கொலை செய்துள்ளது என்பதைப் பற்றியே இங்கு எழுதப் போகிறேன்.
+எனது வாழ்வின் எனது குடும்பத்தின் பொன்னான நேரங்கள் இழந்தோம். இந்த நாட்டில் உருவாக்கி வைக்கப்பட்டு உள்ள **பாலியல் அடிப்படையிலான சட்டங்கள்** என்னையும் எனது குடும்பத்தையும் எப்படி கொலை செய்துள்ளது என்பதைப் பற்றியே இங்கு எழுதப் போகிறேன்.
+
+- காவல் துறை என்றால் என்ன?
+- நீதி என்றால் என்ன?
+- சட்டம் என்றால் என்ன?
+- நீதியும் சட்டமும் ஒன்றா?
+- சட்டத்தின் முன் அனைவரும் சமமா?
+
+உங்களை நீங்களே கேட்டுக் கொள்ளுங்கள்.
+
+ஒரு போலியான குடிமகனாகவே நம்மை வாழ வைத்துக் கொண்டு உள்ளனர், இந்த நாட்டின் அரசியல்வாதிகள்.
+
+- சேலை உடித்தின மாதர் என்றால் ஒரு நடைமுறை.
+- வேட்டி உடித்தின ஆடவர் என்றால் ஒரு நடைமுறை.
+
+இதுதான் இந்த நாட்டின் நீதி.
+
+
